--- a/Project2/View/Text/FontSizeTableViewCell.xib
+++ b/Project2/View/Text/FontSizeTableViewCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="FontSizeTableViewCell" customModule="Project2" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="FontSizeTableViewCell" customModule="Project2" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="317" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -51,6 +51,7 @@
                     <constraint firstItem="fa9-g9-C9M" firstAttribute="centerY" secondItem="tjx-Yz-iZP" secondAttribute="centerY" id="wTF-XR-uRJ"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" red="0.87450980389999999" green="0.85882352939999995" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="fontSizeLabel" destination="fa9-g9-C9M" id="FM1-20-h7E"/>
